tests/language_modules/05_records/valid/field_assignment.vf
module FieldAssignment

type Account is record
    id: Integer
    active: Boolean
end record

procedure main()
is
    let account: Account = Account { id: 1, active: false }
    account.active := true
    check account.active
end main

end FieldAssignment