tests/language_modules/05_records/invalid_semantics/unknown_field_access.vf
module UnknownFieldAccess

type Account is record
    id: Integer
end record

procedure main()
is
    let account: Account = Account { id: 1 }
    check account.active
end main

end UnknownFieldAccess